[gd_scene load_steps=10 format=4 uid="uid://dk80xnogirw8e"]

[ext_resource type="Script" uid="uid://drjuvpmm7vcu8" path="res://scenes/main.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://crewb771rpf3i" path="res://assets/sokoban_tilesheet.png" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://bpcmo6ayr46c4" path="res://entities/Player/Player.tscn" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://chgu04ru2o45i" path="res://Track/Track.tscn" id="4_jyhfs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ig7tw"]
texture = ExtResource("1_sugp2")
texture_region_size = Vector2i(64, 64)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
3:1/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
12:1/0 = 0
12:2/0 = 0
12:3/0 = 0
12:4/0 = 0
12:5/0 = 0
12:6/0 = 0
12:7/0 = 0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:5/0 = 0
11:4/0 = 0
11:3/0 = 0
10:3/0 = 0
10:4/0 = 0
10:5/0 = 0
10:6/0 = 0
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:7/0 = 0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:6/0 = 0
11:2/0 = 0
11:1/0 = 0
10:2/0 = 0
10:1/0 = 0
9:1/0 = 0
9:2/0 = 0
9:3/0 = 0
9:4/0 = 0
8:2/0 = 0
8:3/0 = 0
8:1/0 = 0
8:4/0 = 0
8:5/0 = 0
8:6/0 = 0
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:6/0 = 0
9:5/0 = 0
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:7/0 = 0
4:7/0 = 0
3:7/0 = 0
2:7/0 = 0
1:7/0 = 0
0:7/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
7:5/0 = 0
6:5/0 = 0
5:5/0 = 0
4:5/0 = 0
3:5/0 = 0
2:5/0 = 0
1:5/0 = 0
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_0xm2m"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ig7tw")

[sub_resource type="LabelSettings" id="LabelSettings_sugp2"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_jyhfs"]
font_size = 60
font_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tbgi4"]
font_size = 50
font_color = Color(1, 0, 0, 1)

[node name="main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 1)
tile_map_data = PackedByteArray("AAADAAsAAAALAAYAAAADAAwAAAALAAYAAAADAA0AAAALAAYAAAADAA4AAAALAAYAAAADAA8AAAALAAYAAAADABAAAAALAAYAAAADABEAAAALAAYAAAADABIAAAALAAYAAAADABMAAAALAAYAAAADABQAAAALAAYAAAADABUAAAALAAYAAAADABYAAAALAAYAAAADABcAAAALAAYAAAADABgAAAALAAYAAAADABkAAAALAAYAAAADABoAAAALAAYAAAADABsAAAALAAYAAAADABwAAAALAAYAAAADAB0AAAALAAYAAAADAB4AAAALAAYAAAAEAAsAAAALAAYAAAAEAAwAAAAIAAcAAAAEAA0AAAAIAAcAAAAEAA4AAAAIAAcAAAAEAA8AAAAIAAcAAAAEABAAAAAIAAcAAAAEABEAAAAIAAcAAAAEABIAAAAIAAcAAAAEABMAAAAIAAcAAAAEABQAAAALAAYAAAAEABUAAAALAAYAAAAEABYAAAALAAYAAAAEABcAAAALAAYAAAAEABgAAAALAAYAAAAEABkAAAALAAYAAAAEABoAAAALAAYAAAAEABsAAAALAAYAAAAEABwAAAALAAYAAAAEAB0AAAALAAYAAAAEAB4AAAALAAYAAAAFAAsAAAALAAYAAAAFAAwAAAAIAAcAAAAFAA0AAAALAAYAAAAFAA4AAAALAAYAAAAFAA8AAAALAAYAAAAFABAAAAALAAYAAAAFABEAAAALAAYAAAAFABIAAAALAAYAAAAFABMAAAAIAAcAAAAFABQAAAALAAYAAAAFABUAAAALAAYAAAAFABYAAAALAAYAAAAFABcAAAALAAYAAAAFABgAAAALAAYAAAAFABkAAAALAAYAAAAFABoAAAALAAYAAAAFABsAAAALAAYAAAAFABwAAAALAAYAAAAFAB0AAAALAAYAAAAFAB4AAAALAAYAAAAGAAsAAAALAAYAAAAGAAwAAAAIAAcAAAAGAA0AAAALAAYAAAAGAA4AAAALAAYAAAAGAA8AAAALAAYAAAAGABAAAAALAAYAAAAGABEAAAALAAYAAAAGABIAAAALAAYAAAAGABMAAAAIAAcAAAAGABQAAAALAAYAAAAGABUAAAALAAYAAAAGABYAAAALAAYAAAAGABcAAAALAAYAAAAGABgAAAALAAYAAAAGABkAAAALAAYAAAAGABoAAAALAAYAAAAGABsAAAALAAYAAAAGABwAAAALAAYAAAAGAB0AAAALAAYAAAAGAB4AAAALAAYAAAAHAAsAAAALAAYAAAAHAAwAAAAIAAcAAAAHAA0AAAALAAYAAAAHAA4AAAALAAYAAAAHAA8AAAALAAYAAAAHABAAAAALAAYAAAAHABEAAAALAAYAAAAHABIAAAALAAYAAAAHABMAAAAIAAcAAAAHABQAAAALAAYAAAAHABUAAAALAAYAAAAHABYAAAALAAYAAAAHABcAAAALAAYAAAAHABgAAAALAAYAAAAHABkAAAALAAYAAAAHABoAAAALAAYAAAAHABsAAAALAAYAAAAHABwAAAALAAYAAAAHAB0AAAALAAYAAAAHAB4AAAALAAYAAAAIAAsAAAALAAYAAAAIAAwAAAAIAAcAAAAIAA0AAAALAAYAAAAIAA4AAAALAAYAAAAIAA8AAAALAAYAAAAIABAAAAALAAYAAAAIABEAAAALAAYAAAAIABIAAAALAAYAAAAIABMAAAAIAAcAAAAIABQAAAALAAYAAAAIABUAAAALAAYAAAAIABYAAAALAAYAAAAIABcAAAALAAYAAAAIABgAAAALAAYAAAAIABkAAAALAAYAAAAIABoAAAALAAYAAAAIABsAAAALAAYAAAAIABwAAAALAAYAAAAIAB0AAAALAAYAAAAIAB4AAAALAAYAAAAJAAsAAAALAAYAAAAJAAwAAAAIAAcAAAAJAA0AAAALAAYAAAAJAA4AAAALAAYAAAAJAA8AAAALAAYAAAAJABAAAAALAAYAAAAJABEAAAALAAYAAAAJABIAAAALAAYAAAAJABMAAAAIAAcAAAAJABQAAAALAAYAAAAJABUAAAALAAYAAAAJABYAAAALAAYAAAAJABcAAAALAAYAAAAJABgAAAALAAYAAAAJABkAAAALAAYAAAAJABoAAAALAAYAAAAJABsAAAALAAYAAAAJABwAAAALAAYAAAAJAB0AAAALAAYAAAAJAB4AAAALAAYAAAAKAAsAAAALAAYAAAAKAAwAAAAIAAcAAAAKAA0AAAALAAYAAAAKAA4AAAALAAYAAAAKAA8AAAALAAYAAAAKABAAAAALAAYAAAAKABEAAAALAAYAAAAKABIAAAALAAYAAAAKABMAAAAIAAcAAAAKABQAAAALAAYAAAAKABUAAAALAAYAAAAKABYAAAALAAYAAAAKABcAAAALAAYAAAAKABgAAAALAAYAAAAKABkAAAALAAYAAAAKABoAAAALAAYAAAAKABsAAAALAAYAAAAKABwAAAALAAYAAAAKAB0AAAALAAYAAAAKAB4AAAALAAYAAAALAAsAAAALAAYAAAALAAwAAAAIAAcAAAALAA0AAAAIAAcAAAALAA4AAAAIAAcAAAALAA8AAAAIAAcAAAALABAAAAAIAAcAAAALABEAAAAIAAcAAAALABIAAAAIAAcAAAALABMAAAAIAAcAAAALABQAAAALAAYAAAALABUAAAALAAYAAAALABYAAAALAAYAAAALABcAAAALAAYAAAALABgAAAALAAYAAAALABkAAAALAAYAAAALABoAAAALAAYAAAALABsAAAALAAYAAAALABwAAAALAAYAAAALAB0AAAALAAYAAAALAB4AAAALAAYAAAAMAAsAAAALAAYAAAAMAAwAAAALAAYAAAAMAA0AAAALAAYAAAAMAA4AAAALAAYAAAAMAA8AAAALAAYAAAAMABAAAAALAAYAAAAMABEAAAALAAYAAAAMABIAAAALAAYAAAAMABMAAAALAAYAAAAMABQAAAALAAYAAAAMABUAAAALAAYAAAAMABYAAAALAAYAAAAMABcAAAALAAYAAAAMABgAAAALAAYAAAAMABkAAAALAAYAAAAMABoAAAALAAYAAAAMABsAAAALAAYAAAAMABwAAAALAAYAAAAMAB0AAAALAAYAAAAMAB4AAAALAAYAAAANAAsAAAALAAYAAAANAAwAAAALAAYAAAANAA0AAAALAAYAAAANAA4AAAALAAYAAAANAA8AAAALAAYAAAANABAAAAALAAYAAAANABEAAAALAAYAAAANABIAAAALAAYAAAANABMAAAALAAYAAAANABQAAAALAAYAAAANABUAAAALAAYAAAANABYAAAALAAYAAAANABcAAAALAAYAAAANABgAAAALAAYAAAANABkAAAALAAYAAAANABoAAAALAAYAAAANABsAAAALAAYAAAANABwAAAALAAYAAAANAB0AAAALAAYAAAANAB4AAAALAAYAAAAOAAsAAAALAAYAAAAOAAwAAAALAAYAAAAOAA0AAAALAAYAAAAOAA4AAAALAAYAAAAOAA8AAAALAAYAAAAOABAAAAALAAYAAAAOABEAAAALAAYAAAAOABIAAAALAAYAAAAOABMAAAALAAYAAAAOABQAAAALAAYAAAAOABUAAAALAAYAAAAOABYAAAALAAYAAAAOABcAAAALAAYAAAAOABgAAAALAAYAAAAOABkAAAALAAYAAAAOABoAAAALAAYAAAAOABsAAAALAAYAAAAOABwAAAALAAYAAAAOAB0AAAALAAYAAAAOAB4AAAALAAYAAAAPAAsAAAALAAYAAAAPAAwAAAALAAYAAAAPAA0AAAALAAYAAAAPAA4AAAALAAYAAAAPAA8AAAALAAYAAAAPABAAAAALAAYAAAAPABEAAAALAAYAAAAPABIAAAALAAYAAAAPABMAAAALAAYAAAAPABQAAAALAAYAAAAPABUAAAALAAYAAAAPABYAAAALAAYAAAAPABcAAAALAAYAAAAPABgAAAALAAYAAAAPABkAAAALAAYAAAAPABoAAAALAAYAAAAPABsAAAALAAYAAAAPABwAAAALAAYAAAAPAB0AAAALAAYAAAAPAB4AAAALAAYAAAAAAAAAAAALAAYAAAAAAAEAAAALAAYAAAAAAAIAAAALAAYAAAAAAAMAAAALAAYAAAAAAAQAAAALAAYAAAAAAAUAAAALAAYAAAAAAAYAAAALAAYAAAAAAAcAAAALAAYAAAAAAAgAAAALAAYAAAAAAAkAAAALAAYAAAAAAAoAAAALAAYAAAAAAAsAAAALAAYAAAAAAAwAAAALAAYAAAAAAA0AAAALAAYAAAAAAA4AAAALAAYAAAAAAA8AAAALAAYAAAAAABAAAAALAAYAAAAAABEAAAALAAYAAAAAABIAAAALAAYAAAAAABMAAAALAAYAAAAAABQAAAALAAYAAAAAABUAAAALAAYAAAAAABYAAAALAAYAAAAAABcAAAALAAYAAAAAABgAAAALAAYAAAAAABkAAAALAAYAAAAAABoAAAALAAYAAAAAABsAAAALAAYAAAAAABwAAAALAAYAAAAAAB0AAAALAAYAAAAAAB4AAAALAAYAAAABAAAAAAALAAYAAAABAAEAAAALAAYAAAABAAIAAAALAAYAAAABAAMAAAALAAYAAAABAAQAAAALAAYAAAABAAUAAAALAAYAAAABAAYAAAALAAYAAAABAAcAAAALAAYAAAABAAgAAAALAAYAAAABAAkAAAALAAYAAAABAAoAAAALAAYAAAABAAsAAAALAAYAAAABAAwAAAALAAYAAAABAA0AAAALAAYAAAABAA4AAAALAAYAAAABAA8AAAALAAYAAAABABAAAAALAAYAAAABABEAAAALAAYAAAABABIAAAALAAYAAAABABMAAAALAAYAAAABABQAAAALAAYAAAABABUAAAALAAYAAAABABYAAAALAAYAAAABABcAAAALAAYAAAABABgAAAALAAYAAAABABkAAAALAAYAAAABABoAAAALAAYAAAABABsAAAALAAYAAAABABwAAAALAAYAAAABAB0AAAALAAYAAAABAB4AAAALAAYAAAACAAAAAAALAAYAAAACAAEAAAALAAYAAAACAAIAAAALAAYAAAACAAMAAAALAAYAAAACAAQAAAALAAYAAAACAAUAAAALAAYAAAACAAYAAAALAAYAAAACAAcAAAALAAYAAAACAAgAAAALAAYAAAACAAkAAAALAAYAAAACAAoAAAALAAYAAAACAAsAAAALAAYAAAACAAwAAAALAAYAAAACAA0AAAALAAYAAAACAA4AAAALAAYAAAACAA8AAAALAAYAAAACABAAAAALAAYAAAACABEAAAALAAYAAAACABIAAAALAAYAAAACABMAAAALAAYAAAACABQAAAALAAYAAAACABUAAAALAAYAAAACABYAAAALAAYAAAACABcAAAALAAYAAAACABgAAAALAAYAAAACABkAAAALAAYAAAACABoAAAALAAYAAAACABsAAAALAAYAAAACABwAAAALAAYAAAACAB0AAAALAAYAAAACAB4AAAALAAYAAAADAAAAAAALAAYAAAADAAEAAAALAAYAAAADAAIAAAALAAYAAAADAAMAAAALAAYAAAADAAQAAAALAAYAAAADAAUAAAALAAYAAAADAAYAAAALAAYAAAADAAcAAAALAAYAAAADAAgAAAALAAYAAAADAAkAAAALAAYAAAADAAoAAAALAAYAAAAEAAAAAAALAAYAAAAEAAEAAAALAAYAAAAEAAIAAAALAAYAAAAEAAMAAAALAAYAAAAEAAQAAAALAAYAAAAEAAUAAAALAAYAAAAEAAYAAAALAAYAAAAEAAcAAAALAAYAAAAEAAgAAAALAAYAAAAEAAkAAAALAAYAAAAEAAoAAAALAAYAAAAFAAAAAAALAAYAAAAFAAEAAAALAAYAAAAFAAIAAAALAAYAAAAFAAMAAAALAAYAAAAFAAQAAAALAAYAAAAFAAUAAAALAAYAAAAFAAYAAAALAAYAAAAFAAcAAAALAAYAAAAFAAgAAAALAAYAAAAFAAkAAAALAAYAAAAFAAoAAAALAAYAAAAGAAAAAAALAAYAAAAGAAEAAAALAAYAAAAGAAIAAAALAAYAAAAGAAMAAAALAAYAAAAGAAQAAAALAAYAAAAGAAUAAAALAAYAAAAGAAYAAAALAAYAAAAGAAcAAAALAAYAAAAGAAgAAAALAAYAAAAGAAkAAAALAAYAAAAGAAoAAAALAAYAAAAHAAAAAAALAAYAAAAHAAEAAAALAAYAAAAHAAIAAAALAAYAAAAHAAMAAAALAAYAAAAHAAQAAAALAAYAAAAHAAUAAAALAAYAAAAHAAYAAAALAAYAAAAHAAcAAAALAAYAAAAHAAgAAAALAAYAAAAHAAkAAAALAAYAAAAHAAoAAAALAAYAAAAIAAAAAAALAAYAAAAIAAEAAAALAAYAAAAIAAIAAAALAAYAAAAIAAMAAAALAAYAAAAIAAQAAAALAAYAAAAIAAUAAAALAAYAAAAIAAYAAAALAAYAAAAIAAcAAAALAAYAAAAIAAgAAAALAAYAAAAIAAkAAAALAAYAAAAIAAoAAAALAAYAAAAJAAAAAAALAAYAAAAJAAEAAAALAAYAAAAJAAIAAAALAAYAAAAJAAMAAAALAAYAAAAJAAQAAAALAAYAAAAJAAUAAAALAAYAAAAJAAYAAAALAAYAAAAJAAcAAAALAAYAAAAJAAgAAAALAAYAAAAJAAkAAAALAAYAAAAJAAoAAAALAAYAAAAKAAAAAAALAAYAAAAKAAEAAAALAAYAAAAKAAIAAAALAAYAAAAKAAMAAAALAAYAAAAKAAQAAAALAAYAAAAKAAUAAAALAAYAAAAKAAYAAAALAAYAAAAKAAcAAAALAAYAAAAKAAgAAAALAAYAAAAKAAkAAAALAAYAAAAKAAoAAAALAAYAAAALAAAAAAALAAYAAAALAAEAAAALAAYAAAALAAIAAAALAAYAAAALAAMAAAALAAYAAAALAAQAAAALAAYAAAALAAUAAAALAAYAAAALAAYAAAALAAYAAAALAAcAAAALAAYAAAALAAgAAAALAAYAAAALAAkAAAALAAYAAAALAAoAAAALAAYAAAAMAAAAAAALAAYAAAAMAAEAAAALAAYAAAAMAAIAAAALAAYAAAAMAAMAAAALAAYAAAAMAAQAAAALAAYAAAAMAAUAAAALAAYAAAAMAAYAAAALAAYAAAAMAAcAAAALAAYAAAAMAAgAAAALAAYAAAAMAAkAAAALAAYAAAAMAAoAAAALAAYAAAANAAAAAAALAAYAAAANAAEAAAALAAYAAAANAAIAAAALAAYAAAANAAMAAAALAAYAAAANAAQAAAALAAYAAAANAAUAAAALAAYAAAANAAYAAAALAAYAAAANAAcAAAALAAYAAAANAAgAAAALAAYAAAANAAkAAAALAAYAAAANAAoAAAALAAYAAAAOAAAAAAALAAYAAAAOAAEAAAALAAYAAAAOAAIAAAALAAYAAAAOAAMAAAALAAYAAAAOAAQAAAALAAYAAAAOAAUAAAALAAYAAAAOAAYAAAALAAYAAAAOAAcAAAALAAYAAAAOAAgAAAALAAYAAAAOAAkAAAALAAYAAAAOAAoAAAALAAYAAAAPAAAAAAALAAYAAAAPAAEAAAALAAYAAAAPAAIAAAALAAYAAAAPAAMAAAALAAYAAAAPAAQAAAALAAYAAAAPAAUAAAALAAYAAAAPAAYAAAALAAYAAAAPAAcAAAALAAYAAAAPAAgAAAALAAYAAAAPAAkAAAALAAYAAAAPAAoAAAALAAYAAAAAAB8AAAALAAYAAAABAB8AAAALAAYAAAACAB8AAAALAAYAAAADAB8AAAALAAYAAAAEAB8AAAALAAYAAAAFAB8AAAALAAYAAAAGAB8AAAALAAYAAAAHAB8AAAALAAYAAAAIAB8AAAALAAYAAAAJAB8AAAALAAYAAAAKAB8AAAALAAYAAAALAB8AAAALAAYAAAAMAB8AAAALAAYAAAANAB8AAAALAAYAAAAOAB8AAAALAAYAAAAPAB8AAAALAAYAAAD/////AAALAAYAAAD//wAAAAALAAYAAAD//wEAAAALAAYAAAD//wIAAAALAAYAAAD//wMAAAALAAYAAAD//wQAAAALAAYAAAD//wUAAAALAAYAAAD//wYAAAALAAYAAAD//wcAAAALAAYAAAD//wgAAAALAAYAAAD//wkAAAALAAYAAAD//woAAAALAAYAAAD//wsAAAALAAYAAAD//wwAAAALAAYAAAD//w0AAAALAAYAAAD//w4AAAALAAYAAAD//w8AAAALAAYAAAD//xAAAAALAAYAAAD//xEAAAALAAYAAAD//xIAAAALAAYAAAD//xMAAAALAAYAAAD//xQAAAALAAYAAAD//xUAAAALAAYAAAD//xYAAAALAAYAAAD//xcAAAALAAYAAAD//xgAAAALAAYAAAD//xkAAAALAAYAAAD//xoAAAALAAYAAAD//xsAAAALAAYAAAD//xwAAAALAAYAAAD//x0AAAALAAYAAAD//x4AAAALAAYAAAD//x8AAAALAAYAAAAAAP//AAALAAYAAAABAP//AAALAAYAAAACAP//AAALAAYAAAADAP//AAALAAYAAAAEAP//AAALAAYAAAAFAP//AAALAAYAAAAGAP//AAALAAYAAAAHAP//AAALAAYAAAAIAP//AAALAAYAAAAJAP//AAALAAYAAAAKAP//AAALAAYAAAALAP//AAALAAYAAAAMAP//AAALAAYAAAANAP//AAALAAYAAAAOAP//AAALAAYAAAAPAP//AAALAAYAAAAQAP//AAALAAYAAAAQAAAAAAALAAYAAAAQAAEAAAALAAYAAAAQAAIAAAALAAYAAAAQAAMAAAALAAYAAAAQAAQAAAALAAYAAAAQAAUAAAALAAYAAAAQAAYAAAALAAYAAAAQAAcAAAALAAYAAAAQAAgAAAALAAYAAAAQAAkAAAALAAYAAAAQAAoAAAALAAYAAAAQAAsAAAALAAYAAAAQAAwAAAALAAYAAAAQAA0AAAALAAYAAAAQAA4AAAALAAYAAAAQAA8AAAALAAYAAAAQABAAAAALAAYAAAAQABEAAAALAAYAAAAQABIAAAALAAYAAAAQABMAAAALAAYAAAAQABQAAAALAAYAAAAQABUAAAALAAYAAAAQABYAAAALAAYAAAAQABcAAAALAAYAAAAQABgAAAALAAYAAAAQABkAAAALAAYAAAAQABoAAAALAAYAAAAQABsAAAALAAYAAAAQABwAAAALAAYAAAAQAB0AAAALAAYAAAAQAB4AAAALAAYAAAAQAB8AAAALAAYAAAA=")
tile_set = SubResource("TileSet_0xm2m")

[node name="Player" parent="." instance=ExtResource("2_jyhfs")]
position = Vector2(508, 1027)

[node name="Score" type="Label" parent="."]
offset_left = 155.0
offset_top = 39.0
offset_right = 427.0
offset_bottom = 146.0
text = "Score
"
label_settings = SubResource("LabelSettings_sugp2")

[node name="HighScore" type="Label" parent="."]
offset_left = 557.0
offset_top = 33.0
offset_right = 887.0
offset_bottom = 132.0
text = "HighScore"
label_settings = SubResource("LabelSettings_jyhfs")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 178.0
offset_top = 243.0
offset_right = 882.0
offset_bottom = 270.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HealthContainer" type="HBoxContainer" parent="."]
offset_left = 175.0
offset_top = 319.0
offset_right = 868.0
offset_bottom = 442.0
size_flags_horizontal = 4
alignment = 1

[node name="HealthLabel" type="Label" parent="."]
offset_left = 434.0
offset_top = 303.0
offset_right = 526.0
offset_bottom = 372.0
text = "3"
label_settings = SubResource("LabelSettings_tbgi4")

[node name="Track" parent="." instance=ExtResource("4_jyhfs")]
position = Vector2(612, 1000)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
